sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:12: error: not found: value b
  } while (b=true)
           ^